[tool.poetry]
name = "pypkgs_don"
version = "0.1.0"
description = "toy python package"
authors = ["Daniel Ortiz <daniel.ortiz.n@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
